# plural.py

./: LICENSE  framework  pyproject.toml
src/plural/: __init__.py  _version.py  application.py  enums.py  errors.py  http.py  types.py
src/plural/models/: __init__.py  abc.py  config.py  member.py  message.py
